--- a/Dijkstra_Shunting_Yard_Algorithm/pom.xml
+++ b/Dijkstra_Shunting_Yard_Algorithm/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dijkstra</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>Dijkstra_Shunting_Yard_Algorithm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
